<resources>
    <string name="app_name">Extra Settings</string>
    <string name="action_settings">Settings</string>
    <string name="follow_me">Follow Me on Weibo</string>
    <string name="follow_me_title">Follow Me</string>
    <string name="about_title">About</string>
    <string name="follow_me_bili">Follow me on BiliBili</string>
    <string name="donate_me_wechat">Donate me by Wechat Payment</string>
    <string name="donate_me_alipay">Donate me by Alipay</string>
    <string name="author">Author</string>
    <string name="reboot_recovery">Reboot to Recovery</string>
    <string name="reboot_bl">Reboot to Bootloader</string>
    <string name="reboot_title">Advanced Reboot</string>
    <string name="gesture_title">Gesture</string>
    <string name="slide">Slide Cover</string>
    <string name="pat">Pat a Pat</string>
    <string name="chop">Chop a Chop</string>
    <string name="camgest">Turn a turn</string>
    <string name="misc_title">Misc</string>
    <string name="slide_to_answer">Slide to Answer</string>
    <string name="slide_to_answer_summary">Slide to answer incoming calls</string>
    <string name="slide_to_reject">Close Slide to Reject</string>
    <string name="slide_to_reject_summary">Close the Slip Cover to reject the incoming calls</string>
    <string name="vibrate_on_slide">Vibrate when slide</string>
    <string name="vibrate_on_slide_summary">Do Vibrator when open or close the Slip Cover</string>
    <string name="vibrate_on_gesture">Vibrate when Gesture</string>
    <string name="vibrate_on_gesture_summary">Vibrate when the gesture is triggered</string>
    <string name="cpu_mode">Performance Policy</string>
</resources>
